--- a/src/pages/home/clubs/styles.scss
+++ b/src/pages/home/clubs/styles.scss
@@ -40,11 +40,10 @@
       }
     }
 
-    .icon-arrow {
+    i {
       position: absolute;
       right: 20px;
       top: 50%;
-      transform: translateY(-50%);
     }
   }
 
